--- a/main.html
+++ b/main.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-	<li id="li"></li>
-	
+<script>
+	// Define yourArray
+	let yourArray = ['hello', 42, true, 'world', 7];
+	console.log(yourArray.length);
+	// Output: 5
+</script>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
